# pytest-extra-markers

./: .coveragerc  .dockerignore  .docstr.yaml  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  cliff.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CD.yml  CI.yml
tests/: test_cli_flag_collisions.py  test_cli_flags.py  test_help.py
