[metadata]
name = pytest-extra-markers
description = Additional pytest markers to dynamically enable/disable tests viia CLI flags
author = iwishiwasaneagle
author_email = jh.ewers@gmail.com
license = GPL-3.0-or-later
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/iwishiwasaneagle/pytest-extra-markers/
project_urls =
    Source = "https://github.com/iwishiwasaneagle/pytest-extra-markers"
    Changelog = "https://github.com/iwishiwasaneagle/pytest-extra-markers/blob/master/CHANGELOG.md"
    Issue Tracker = "https://github.com/iwishiwasaneagle/pytest-extra-markers/issues"
platforms = Linux
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 4 - Beta
    Natural Language :: English
    Framework :: Pytest
    Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires =
    importlib-metadata; python_version<"3.8"
    pytest
package_dir =
    = src
packages = find:

[options.extras_require]
test =

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
pytest11 =
    extra_markers = extra_markers.markers

[flake8]
max_line_length = 88
extend_ignore = E203, W503

exclude =
    build
    dist
    .eggs
    docs/conf.py
per-file-ignores =
    __init__.py: F401
